ctrlcode/gimbalboard/gimbctrl/build/gimbctrl/unify_builder.log
[2022-07-29 20:32:38]	[done]
	build successfully !

[2022-07-29 20:34:11]	[done]
	build successfully !

[2022-07-29 20:36:46]	[done]
	build successfully !

[2022-07-29 20:37:12]	[done]
	build successfully !

[2022-07-29 20:37:58]	[done]
	build successfully !

[2022-07-29 20:40:17]	[done]
	build successfully !

[2022-07-29 20:40:43]	[done]
	build successfully !

[2022-07-29 20:40:49]	[done]
	build successfully !

[2022-07-29 20:42:14]	[done]
	build successfully !

[2022-07-29 20:42:48]	[done]
	build successfully !

[2022-07-29 20:43:43]	[done]
	build successfully !

[2022-07-29 20:44:26]	[done]
	build successfully !

[2022-07-29 20:45:42]	[done]
	build successfully !

[2022-07-29 20:45:52]	[done]
	build successfully !

[2022-07-29 20:46:12]	[done]
	build successfully !

[2022-07-29 21:18:04]	compilation failed at : "e:\MXI4\ctrlcode\gimbalboard\gimbctrl\src\devices\canbus.c", exit code: 1
   at unify_builder.Program.Main(String[] args_)
---
./src/devices/canbus.c: In function 'HAL_CAN_RxFifo0MsgPendingCallback':
./src/devices/canbus.c:26:13: error: duplicate case value
   26 |             case trigmotid:
      |             ^~~~
./src/devices/canbus.c:14:13: note: previously used here
   14 |             case fricmotid_1:
      |             ^~~~

[2022-07-29 21:23:47]	[done]
	build successfully !

[2022-07-29 21:24:48]	[done]
	build successfully !

[2022-07-29 21:28:23]	[done]
	build successfully !

[2022-07-29 21:28:37]	[done]
	build successfully !

[2022-07-29 21:29:51]	[done]
	build successfully !

[2022-07-29 21:33:31]	[done]
	build successfully !

[2022-07-29 22:13:54]	[done]
	build successfully !

[2022-07-29 22:20:29]	[done]
	build successfully !

[2022-07-29 22:23:20]	[done]
	build successfully !

[2022-07-30 15:37:50]	[done]
	build successfully !

[2022-07-30 15:41:53]	[done]
	build successfully !

[2022-07-30 16:08:32]	compilation failed at : "e:\MXI4\ctrlcode\gimbalboard\gimbctrl\src\tasks\shoottask.c", exit code: 1
   at unify_builder.Program.compileByMulThread(Int32 thrNum, CmdInfo[] cmds, List`1 errLogs)
   at unify_builder.Program.Main(String[] args_)
---
./src/tasks/shoottask.c: In function 'calc_shootmot_pid':
./src/tasks/shoottask.c:98:5: error: too few arguments to function 'calc_mot_aspid'
   98 |     calc_mot_aspid(tapid, tspid, 2);
      |     ^~~~~~~~~~~~~~
In file included from Inc/main.h:45,
                 from ./src/tasks/shoottask.c:1:
Inc/motlib.h:184:6: note: declared here
  184 | void calc_mot_aspid(PID_regulator *apid,
      |      ^~~~~~~~~~~~~~

[2022-07-30 16:09:08]	[done]
	build successfully !

[2022-07-30 16:14:31]	[done]
	build successfully !

[2022-07-30 16:15:09]	[done]
	build successfully !

[2022-07-30 16:16:57]	[done]
	build successfully !

[2022-07-30 16:19:50]	[done]
	build successfully !

[2022-07-30 16:27:00]	compilation failed at : "e:\MXI4\ctrlcode\gimbalboard\gimbctrl\src\tasks\shoottask.c", exit code: 1
   at unify_builder.Program.compileByMulThread(Int32 thrNum, CmdInfo[] cmds, List`1 errLogs)
   at unify_builder.Program.Main(String[] args_)
---
./src/tasks/shoottask.c: In function 'shoottask':
./src/tasks/shoottask.c:136:9: error: too few arguments to function 'calc_shootmot_pid'
  136 |         calc_shootmot_pid(fricspid, &trigapid, &trigspid);
      |         ^~~~~~~~~~~~~~~~~
./src/tasks/shoottask.c:80:6: note: declared here
   80 | void calc_shootmot_pid(PID_regulator fspid[2], PID_regulator *tapid, PID_regulator *tspid,int8_t counter)
      |      ^~~~~~~~~~~~~~~~~

[2022-07-30 16:29:48]	compilation failed at : "e:\MXI4\ctrlcode\gimbalboard\gimbctrl\src\libs\motlib.c", exit code: 1
   at unify_builder.Program.Main(String[] args_)
---
./src/libs/motlib.c:60:6: error: conflicting types for 'calc_mot_aspid'; have 'void(PID_regulator *, PID_regulator *, MotorInfo *)' {aka 'void(struct PID_regulator_t *, struct PID_regulator_t *, struct _Motor_Info *)'}
   60 | void calc_mot_aspid(PID_regulator *apid,
      |      ^~~~~~~~~~~~~~
In file included from Inc/main.h:45,
                 from ./src/libs/motlib.c:1:
Inc/motlib.h:198:6: note: previous declaration of 'calc_mot_aspid' with type 'void(PID_regulator *, PID_regulator *, int8_t,  int8_t)' {aka 'void(struct PID_regulator_t *, struct PID_regulator_t *, signed char,  signed char)'}
  198 | void calc_mot_aspid(PID_regulator *apid,
      |      ^~~~~~~~~~~~~~

[2022-07-30 16:30:06]	compilation failed at : "e:\MXI4\ctrlcode\gimbalboard\gimbctrl\src\tasks\shoottask.c", exit code: 1
   at unify_builder.Program.compileByMulThread(Int32 thrNum, CmdInfo[] cmds, List`1 errLogs)
   at unify_builder.Program.Main(String[] args_)
---
./src/tasks/shoottask.c: In function 'shoottask':
./src/tasks/shoottask.c:135:9: error: too few arguments to function 'calc_shootmot_pid'
  135 |         calc_shootmot_pid(fricspid, &trigapid, &trigspid);
      |         ^~~~~~~~~~~~~~~~~
./src/tasks/shoottask.c:80:6: note: declared here
   80 | void calc_shootmot_pid(PID_regulator fspid[2], PID_regulator *tapid, PID_regulator *tspid, MotorInfo *mi)
      |      ^~~~~~~~~~~~~~~~~

[2022-07-30 16:30:31]	[done]
	build successfully !

[2022-07-30 16:31:34]	[done]
	build successfully !

[2022-07-30 16:34:20]	[done]
	build successfully !

[2022-07-30 16:34:51]	[done]
	build successfully !

[2022-07-30 16:35:17]	[done]
	build successfully !

[2022-07-30 16:35:35]	[done]
	build successfully !

[2022-07-30 16:35:54]	[done]
	build successfully !

[2022-07-30 16:39:11]	[done]
	build successfully !

[2022-07-30 16:40:11]	[done]
	build successfully !

[2022-07-30 16:40:21]	[done]
	build successfully !

[2022-07-30 16:59:08]	[done]
	build successfully !

[2022-07-30 19:43:45]	[done]
	build successfully !

[2022-07-30 19:43:48]	[done]
	build successfully !

